Fix for viewing on mobile

--- a/rustedbunions/crapdb/static/crapdb/css/about.css
+++ b/rustedbunions/crapdb/static/crapdb/css/about.css
@@ -1,9 +1,3 @@
-body {
-    padding-top: 60px;
-    padding-bottom: 40px;
-    background-color: #eee;
-}
-
 img {
     width:auto;
     max-width:100%;
