--- a/rustedbunions/leaderboard/static/leaderboard/css/index.css
+++ b/rustedbunions/leaderboard/static/leaderboard/css/index.css
@@ -1,9 +1,3 @@
-body {
-    padding-top: 60px;
-    background-color: #eee;
-    padding-bottom: 40px;
-}
-
 form.form-inline {
     padding-bottom: 5px;
     padding-top: 5px;
